Bug 170027 - Crash when undoing shape drag with Alt pressed
Summary: Crash when undoing shape drag with Alt pressed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All Windows (All)
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords: notBibisectable, regression
Depends on:
Blocks: Undo-Redo Crash
  Show dependency treegraph
 
Reported: 2025-12-17 18:06 UTC by Gabor Kelemen (Collabora)
Modified: 2026-02-08 20:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["SdrUndoRemoveObj::Undo()"]


Attachments
Example file from Impress (15.79 KB, application/vnd.oasis.opendocument.presentation)
2025-12-17 18:06 UTC, Gabor Kelemen (Collabora)
Details
Backtrace (3.69 KB, text/plain)
2025-12-22 08:08 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-12-17 18:06:48 UTC
Created attachment 204695 [details]
Example file from Impress

1. Open attached file
2. Click on the red shape long until the cursor shape changes
3. Press Alt and move the cursor a bit
4. Release the mouse - nothing visible happened
5. Undo
-> Crash

Normally, when the above process is applied to two shapes, there is no crash:
1. Open attached file
2. Click on the red shape long until the cursor shape changes
3. Press Alt and move the cursor above the heart shape
4. Release the mouse. 
-> The red shape replaces the heart shape.
5. Undo
-> The editing is reverted normally without crash

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 24; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to have started sometime in 4.2 - in 4.1, Long click on the shape + Alt was invalid operation.
Comment 1 Saburo 2025-12-18 23:21:35 UTC
not repro
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 2; OS: Linux 6.16; UI render: default; VCL: kf5 (cairo+wayland)
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

repro
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: threaded

and in
2025-12-16
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

and in
bibisect-win32-4.3(oldest)
Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3

windows only
notbibisectable
Comment 2 Aron Budea 2025-12-22 08:08:44 UTC
Created attachment 204751 [details]
Backtrace
Comment 3 Commit Notification 2025-12-23 18:39:55 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9f980e021ff1a7613003e5c93ec49a37c5ca3420

tdf#170027 - sd fix crash when undoing shape drag with Alt pressed

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-12-24 11:20:27 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/863334b176cb4e9b2aefa7f0569bc50d390a9937

tdf#170027 - sd fix crash when undoing shape drag with Alt pressed

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-24 11:20:31 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0dc03683f9536123327963c170203addb8408930

tdf#170027 - sd fix crash when undoing shape drag with Alt pressed

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2026-01-06 18:07:55 UTC
Verified in custom build:

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: c0b14ab9aa4d713a6b718ef07b9e0379b88e97d3
CPU threads: 24; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

There is no crash anymore. But also the Alt+drop on the other shape feature, described in the second half of the original comment, is now gone too (seen with the above example file attachment 204695 [details] ).
Comment 7 Commit Notification 2026-01-07 14:50:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b10b28b6575b387ea4a7a0b91283690610158a2a

Related tdf#170027 - Crash when undoing shape drag with Alt pressed

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2026-01-28 08:49:25 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/eaaf3693cfb633777e924e2fea4222aa1ac22c8a

Related tdf#170027 - Crash when undoing shape drag with Alt pressed

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-02-05 12:59:51 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/b452b76c112d8c39ef83ea0087298113c3f98358

Related tdf#170027 - Crash when undoing shape drag with Alt pressed

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.