tdf#170027 - sd fix crash when undoing shape drag with Alt pressed

Do not overwrite original shape during drag&drop with Alt,
when we try to drag&drop the shape on the same shape,
but create a new shape with new name, same as if we would drag&drop
the object in general.

Change-Id: I08b2197b3b9755455a165a566eb3452846c0f78e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196097
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 9f980e021ff1a7613003e5c93ec49a37c5ca3420)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196172
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>