sd/source/ui/view/sdview3.cxx
@@ -746,7 +746,7 @@ bool View::InsertData( const TransferableDataHelper& rDataHelper,
                         SdrPageView*    pPV = nullptr;
                         SdrObject* pPickObj2 = PickObj(rPos, getHitTolLog(), pPV);
 
-                        if( ( mnAction & DND_ACTION_MOVE ) && pPickObj2 && pObj )
+                        if( ( mnAction & DND_ACTION_MOVE ) && pPickObj2 && pObj && pPickObj2->GetName() != pObj->GetName() )
                         {
                             // replace object
                             SdrPage* pWorkPage = GetSdrPageView()->GetPage();
@@ -786,6 +786,7 @@ bool View::InsertData( const TransferableDataHelper& rDataHelper,
                             mnAction = DND_ACTION_COPY;
                         }
                         else if( ( mnAction & DND_ACTION_LINK ) && pPickObj2 && pObj &&
+                            pPickObj2->GetName() != pObj->GetName() &&
                             dynamic_cast< const SdrGrafObj *>( pPickObj2 ) ==  nullptr &&
                                 dynamic_cast< const SdrOle2Obj *>( pPickObj2 ) ==  nullptr )
                         {
