svx/source/svdraw/svdundo.cxx
@@ -703,6 +703,7 @@ void SdrUndoRemoveObj::Undo()
     // position of the target object.
     Point aOwnerAnchorPos(0, 0);
 
+    assert(pObjList); // must never be null
     if (dynamic_cast< const SdrObjGroup* >(pObjList->getSdrObjectFromSdrObjList()) != nullptr)
     {
         aOwnerAnchorPos = pObjList->getSdrObjectFromSdrObjList()->GetAnchorPos();
@@ -725,6 +726,7 @@ void SdrUndoRemoveObj::Redo()
     {
         ImplUnmarkObject( mxObj.get() );
         E3DModifySceneSnapRectUpdater aUpdater(mxObj.get());
+        assert(pObjList); // must never be null
         pObjList->RemoveObject(mxObj->GetOrdNum());
     }
 
@@ -747,6 +749,7 @@ void SdrUndoInsertObj::Undo()
     {
         ImplUnmarkObject( mxObj.get() );
 
+        assert(pObjList); // must never be null
         rtl::Reference<SdrObject> pChkObj= pObjList->RemoveObject(mxObj->GetOrdNum());
         DBG_ASSERT(pChkObj.get()==mxObj.get(),"UndoInsertObj: RemoveObjNum!=mxObj");
     }
@@ -762,6 +765,7 @@ void SdrUndoInsertObj::Redo()
         // <InsertObject(..)>. Needed for correct Redo in Writer. (#i45952#)
         Point aAnchorPos( 0, 0 );
 
+        assert(pObjList); // must never be null
         if (dynamic_cast<const SdrObjGroup*>(pObjList->getSdrObjectFromSdrObjList()) != nullptr)
         {
             aAnchorPos = mxObj->GetAnchorPos();
@@ -857,12 +861,14 @@ void SdrUndoReplaceObj::Undo()
     DBG_ASSERT(mxNewObj->IsInserted(),"SdrUndoReplaceObj::Undo(): New object is not inserted!");
 
     ImplUnmarkObject( mxNewObj.get() );
+    assert(m_pObjList); // must never be null
     m_pObjList->ReplaceObject(mxObj.get(), mxNewObj->GetOrdNum());
 }
 
 void SdrUndoReplaceObj::Redo()
 {
     ImplUnmarkObject( mxObj.get() );
+    assert(m_pObjList); // must never be null
     m_pObjList->ReplaceObject(mxNewObj.get(), mxObj->GetOrdNum());
 
     // Trigger PageChangeCall
